--- a/apaAgenda/app/src/main/res/values/strings.xml
+++ b/apaAgenda/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-   <string name="app_name">apaAgenda</string>
+    <string name="app_name">apaAgenda</string>
     <string name="lblsnome">Nome</string>
     <string name="gravar">Gravar</string>
     <string name="telefone">Telefone</string>
@@ -8,4 +8,5 @@
     <string name="fechar">Fechar</string>
     <string name="hintsCamposNomes">Digite aqui o seu nome</string>
     <string name="hintsCamposTelefones">Digite aqui o seu telefone</string>
+    <string name="tituloConsultaContatos">Consulta de Contatos</string>
 </resources>
